Generate actual strings for "string enums" rather than numbers #1
